Nueva funcionalidad para editar cusos

--- a/src/main/resources/templates/courses/edit.html
+++ b/src/main/resources/templates/courses/edit.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
-<html xmlns="http://wwww.thymeleaf.org"
-    th:replace="layouts/template :: userTemplate(#{ui.courses.index.window.title}, _, ~{::#crumbs}, ~{::section}, _)">
+<html xmlns:th="http://www.thymeleaf.org"
+    th:replace="layouts/template :: userTemplate(#{ui.courses.edit.window.title}, _, ~{::#crumbs}, ~{::section}, _)">
 
 <body>
 
     <ul id="crumbs">
         <li><a th:href="@{/courses}" th:text="#{ui.breadcrumb.courses}"></a></li>
         <li><a th:href="@{/courses(id=${course.cycle.id})}" th:text="${course.cycle.name}"></a></li>
-        <li class="is-active"><a th:text="#{ui.breadcrumb.courses.create}"></a></li>
-        <li class="is-active"><a th:text="#{ui.breadcrumb.courses.create}"></a></li>
+        <li class="is-active"><a th:text="#{ui.common.actions.edit}"></a></li>
     </ul>
 
     <section class="section">
         <div class="container">
             <div class="panel is-light">
-                <h1 class="panel-heading" th:text="#{ui.courses.create.panel.heading}"></h1>
+                <h1 class="panel-heading" th:text="#{ui.courses.edit.panel.heading}"></h1>
                 <div class="panel-block has-background-white">
                     <div class="container">
-                        <form th:method="POST" th:action="@{/courses/create(cid=${course.cycle.id})}"
+                        <form th:method="POST" th:action="@{/courses/{courseId}/edit(courseId=${course.id})}"
                             th:object="${course}" autocomplete="off">
                             <div class="field is-horizontal">
                                 <div class="field-label is-normal">
-                                    <label class="label" th:for="*{cycle.name}"
+                                    <label class="label" th:for="*{cycle}"
                                         th:text="#{ui.courses.create.form.cycle}"></label>
                                 </div>
                                 <div class="field-body">
                                     <div class="field">
-                                        <div class="control" Z>
-                                            <input type="text" th:value="*{cycle.name}" class="input is-static"
+                                        <div class="control">
+                                            <input type="text" class="input is-static" th:field="*{cycle.name}"
                                                 readonly />
                                             <input type="hidden" th:field="*{cycle.id}" />
+                                            <input type="hidden" th:field="*{id}" />
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="field is-horizontal">
-                                <div class="field-label is-normal"><label for="*{name}" class="label"
-                                        th:text="#{ui.courses.create.form.name}"></label></div>
+                                <div class="field-label is-normal">
+                                    <label class="label" th:for="*{name}"
+                                        th:text="#{ui.courses.create.form.name}"></label>
+                                </div>
                                 <div class="field-body">
                                     <div class="field">
                                         <div class="control">
-                                            <input type="text" class="input" th:field="*{name}"
-                                                th:errorclass="is-danger"
-                                                th:placeholder="#{ui.courses.create.form.name.placeholder}" autofocus />
+                                            <input class="input" type="text" th:field="*{name}" th:value="*{name}"
+                                                th:errorclass="is-danger" autofocus
+                                                th:placeholder="#{ui.courses.create.form.name.placeholder}" />
                                             <span class="help is-danger" th:errors="*{name}"></span>
                                         </div>
                                     </div>
@@ -67,7 +69,7 @@
                                 </div>
                             </div>
                             <div class="field is-horizontal">
-                                <div class="field-label is-normal">
+                                <div class="field-label is-normañ">
                                     <label class="label" th:for="*{classroom}"
                                         th:text="#{ui.courses.create.form.classroom}"></label>
                                 </div>
@@ -89,7 +91,8 @@
                                 <div class="field-body">
                                     <div class="field">
                                         <div class="control">
-                                            <button type="submit" class="button is-info" th:text="#{ui.common.button.save}"></button>
+                                            <button type="submit" class="button is-info"
+                                                th:text="#{ui.common.button.save}"></button>
                                         </div>
                                     </div>
                                 </div>
