--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -13,6 +13,7 @@
                 <h1 class="panel-heading" th:text="#{ui.users.index.panel.heading}"></h1>
                 <div class="panel-block has-background-white">
                     <div class="container">
+                        <nav th:replace="fragments/pagination :: pagination(${users}, '/users')"></nav>
                         <table class="table is-fullwidth is-bordered is-hoverable">
                             <thead class="has-background-grey-lighter">
                                 <tr>
