Se agrego funcionalidad que muestra todos los datos relacionados a un curso en la misma vista. Se integro en la vista de curso enlace para agregar materias al curso que se esta mostrando. Se agrego funcionalidad para mostar lista de materias del curso en la misma pagina. Se modifico funcion crear materia para que al crear una materia envie de nuevo a la pagina de ver curso

--- a/src/main/resources/templates/subjects/create.html
+++ b/src/main/resources/templates/subjects/create.html
@@ -7,7 +7,7 @@
     <ul id="crumbs">
         <li><a th:href="@{/courses}" th:text="#{ui.breadcrumb.courses}"></a></li>
         <li><a th:href="@{/courses(id=${subject.course.cycle.id})}" th:text="${subject.course.cycle.name}"></a></li>
-        <li><a href="#" th:text="${subject.course.name}"></a></li>
+        <li><a th:href="@{/courses/{courseId}(courseId=${subject.course.id})}" th:text="${subject.course.name}"></a></li>
         <li class="is-active"><a th:text="#{ui.breadcrumb.subjects.create}"></a></li>
     </ul>
 
@@ -66,7 +66,7 @@
                                             <div class="select">
                                                 <select th:field="*{teacher.id}">
                                                     <option th:each="teacher : ${teachers}" th:value="${teacher.id}"
-                                                        th:text="${teacher.name}"></option>
+                                                        th:text="${teacher.fullname}"></option>
                                                 </select>
                                             </div>
                                         </div>
