--- a/src/main/resources/templates/courses/create.html
+++ b/src/main/resources/templates/courses/create.html
@@ -8,7 +8,6 @@
         <li><a th:href="@{/courses}" th:text="#{ui.breadcrumb.courses}"></a></li>
         <li><a th:href="@{/courses(id=${course.cycle.id})}" th:text="${course.cycle.name}"></a></li>
         <li class="is-active"><a th:text="#{ui.breadcrumb.courses.create}"></a></li>
-        <li class="is-active"><a th:text="#{ui.breadcrumb.courses.create}"></a></li>
     </ul>
 
     <section class="section">
@@ -59,7 +58,7 @@
                                             <div class="select">
                                                 <select th:field="*{manager.id}">
                                                     <option th:each="manager : ${managers}" th:value="${manager.id}"
-                                                        th:text="${manager.name}"></option>
+                                                        th:text="${manager.fullname}"></option>
                                                 </select>
                                             </div>
                                         </div>
