--- a/src/main/resources/templates/courses/index.html
+++ b/src/main/resources/templates/courses/index.html
@@ -5,13 +5,17 @@
 <body>
 
     <ul id="crumbs">
-        <li class="is-active"><a th:text="#{ui.breadcrumb.courses}"></a></li>
+        <li th:class="${selectedCycle} ? '' : 'is-active'"><a th:href="${selectedCycle} ? '#' : @{/courses}"
+                th:text="#{ui.breadcrumb.courses}"></a></li>
+        <li th:if="${selectedCycle}" class="is-active"><a href="#" th:text="${selectedCycle.name}"></a></li>
     </ul>
 
     <section class="section">
         <div class="container">
             <div class="panel is-light">
-                <h1 class="panel-heading" th:text="#{ui.courses.index.panel.heading}"></h1>
+                <h1 class="panel-heading"
+                    th:text="${selectedCycle} ? #{ui.courses.index.panel.heading} + ' [' + ${selectedCycle.name} + ']' : #{ui.courses.index.panel.heading}">
+                </h1>
                 <div class="panel-block has-background-white">
                     <div class="container">
                         <form th:method="GET" th:action="@{/courses}" th:object="${cycle}">
@@ -33,15 +37,9 @@
                         </form>
                         <div class="section" th:if="${courses}">
                             <div class="container">
-                                <div class="level">
-                                    <div class="lavel-left">
-                                        <div class="level-item">
-                                            <a class="button is-info is-outlined"
-                                                th:href="@{/courses/create(cid=${param.id})}"
-                                                th:text="#{ui.courses.index.button.createCourse}"></a>
-                                        </div>
-                                    </div>
-                                </div>
+                                <a class="button is-link is-outlined mb-2"
+                                    th:href="@{/courses/create(cid=${param.id})}"
+                                    th:text="#{ui.courses.index.button.createCourse}"></a>
                                 <table class="table is-bordered is-hoverable is-fullwidth">
                                     <thead class="has-background-grey-lighter">
                                         <tr>
@@ -50,13 +48,15 @@
                                             <th th:text="#{ui.courses.index.table.cycle}"></th>
                                             <th th:text="#{ui.courses.index.table.classroom}"></th>
                                             <th th:text="#{ui.common.table.edit}"></th>
-                                            <th th:text="#{ui.courses.index.table.subjects}"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr th:each="course : ${courses}">
-                                            <td th:text="${course.name}"></td>
-                                            <td th:text="${course.manager.username}"></td>
+                                            <td>
+                                                <a class="has-text-weight-bold" th:href="@{/courses/{courseId}(courseId=${course.id})}"
+                                                    th:text="${course.name}"></a>
+                                            </td>
+                                            <td th:text="${course.manager.fullname}"></td>
                                             <td th:text="${course.cycle.name}"></td>
                                             <td>
                                                 <span th:remove="tag" th:if="${course.classroom}"
@@ -67,14 +67,6 @@
                                                     th:href="@{/courses/{courseId}/edit(courseId=${course.id})}">
                                                     <span class="icon">
                                                         <i class="fas fa-edit"></i>
-                                                    </span>
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <a class="button is-primary is-light"
-                                                    th:href="@{/subjects/create(cid=${course.id})}">
-                                                    <span class="icon">
-                                                        <i class="fa fa-book"></i>
                                                     </span>
                                                 </a>
                                             </td>
