--- a/src/main/resources/templates/courses/show.html
+++ b/src/main/resources/templates/courses/show.html
@@ -62,6 +62,8 @@
                                     <th th:text="#{ui.courses.show.table.subject.days}"></th>
                                     <th th:text="#{ui.courses.show.table.subject.start}"></th>
                                     <th th:text="#{ui.courses.show.table.subject.end}"></th>
+                                    <td th:text="#{ui.common.actions.edit}"></td>
+                                    <td th:text="#{ui.common.actions.delete}"></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -87,6 +89,16 @@
                                     </td>
                                     <td th:text="${subject.schedule.startTime}"></td>
                                     <td th:text="${subject.schedule.endTime}"></td>
+                                    <td>
+                                        <a class="button is-info is-light" th:href="@{/subjects/{subjectId}/edit(subjectId=${subject.id})}">
+                                            <span class="icon"><i class="fas fa-edit"></i></span>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a class="button is-danger is-light" th:href="@{/subjects/{subjectId}/delete(subjectId=${subject.id})}">
+                                            <span class="icon"><i class="fas fa-trash"></i></span>
+                                        </a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
