--- a/src/main/resources/templates/users/create.html
+++ b/src/main/resources/templates/users/create.html
@@ -6,7 +6,7 @@
 
     <ul id="crumbs">
         <li>
-            <a href="#" th:text="#{ui.breadcrumb.users}"></a>
+            <a th:href="@{/users}" th:text="#{ui.breadcrumb.users}"></a>
         </li>
         <li class="is-active">
             <a href="#" th:text="#{ui.breadcrumb.users.create}"></a>
